// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button isWaiting state matches snapshot 1`] = `
<button
  className="sc-bczRLJ cJphOo"
  disabled={true}
>
  Submitting...
</button>
`;

exports[`Button matches light color snapshot 1`] = `
<button
  className="sc-bczRLJ gWva-dl"
>
  Click Me
</button>
`;

exports[`Button matches snapshot 1`] = `
<button
  className="sc-bczRLJ cJphOo"
>
  Click Me
</button>
`;

exports[`Button renders as a tag 1`] = `
<a
  className="sc-bczRLJ cJphOo"
>
  Click Me
</a>
`;
